I added an image.

--- a/pages/about.html
+++ b/pages/about.html
@@ -2,7 +2,17 @@
 <html>
      <title>Page About</title>
      <h1>All About Adrian Herbert Jr.</h1>
-     
-
+     <p>I'm a 16-year-old boy who loves anime and, more specifically, Dragon Ball Z and Sonic the Hedgehog.I love videogames and technology and plan on becoming a videogame designer or computer technician/computer engineer.
+     To be more specific about the videogames topic, I like fighting games an racing games, platformers, FPS and stealth games. to be ranked they are 
+     </p>
+     <ol>
+        <li>Fighting Games</li>
+        <li>Stealth Games</li>
+        <li>Platformers</li>
+        <li>Racing Games</li>
+        <li>FPS</li>
+     </ol>
+     <p>This is a stealth game.</p>
+     <img src="http://images.pushsquare.com/news/2018/02/assassins_creed_origins_ps4_patch_1_3_out_now_adds_new_game_plus_discovery_tour/attachment/0/original.jpg">
     
 </html>
