--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<head>
+<head
   <title>Portfolio Page</title>
   <link href="style.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
@@ -27,4 +27,5 @@
     <button>Like</button>
     <p id="like"></p>
   </div>
+
 </body>
