--- a/pages/about.html
+++ b/pages/about.html
@@ -10,9 +10,9 @@
         <li>Stealth Games</li>
         <li>Platformers</li>
         <li>Racing Games</li>
-        <li>FPS</li>
+        <li>First-Person Shooters</li>
      </ol>
      <p>This is a stealth game.</p>
-     <img src="http://images.pushsquare.com/news/2018/02/assassins_creed_origins_ps4_patch_1_3_out_now_adds_new_game_plus_discovery_tour/attachment/0/original.jpg">
+     <img id = "stealth" src="http://images.pushsquare.com/news/2018/02/assassins_creed_origins_ps4_patch_1_3_out_now_adds_new_game_plus_discovery_tour/attachment/0/original.jpg">
     
 </html>
