--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <head
-  <title>Portfolio Page</title>
+  <title></title>
   <link href="style.css" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
   <script src="script.js"></script>
@@ -8,7 +8,7 @@
 <body>
   <header>
     <img id="profile" src="images/scripted_logo_orange.png">
-    <h1 id=head>Adrian Herbert's Portfolio</h1>
+    <h1 id=head>Adrian Herbert Jr's Portfolio</h1>
     <ul>
       <li><a class="nav" href="./index.html">Home</a></li>
       <li><a class="nav" href="pages/about.html">About</a></li>
@@ -27,5 +27,8 @@
     <button>Like</button>
     <p id="like"></p>
   </div>
+  <a href="/pages/about.html"></a>
+  <q href="/pages/contact.html"></a>
+  
 
 </body>
